src/infra/security/opa/restrict-namespaces.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestrictnamespaces
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictNamespaces
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srestrictnamespaces

        violation[{"msg": msg}] {
          input.review.object.metadata.namespace == "snisid-core"
          input.review.userInfo.username != "system:serviceaccount:argocd:argocd-application-controller"
          msg := "Direct modifications to the snisid-core namespace are strictly forbidden. You must use GitOps."
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: block-manual-core-edits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "Deployment", "Service"]
